# django-mooch

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
flock/: admin.py  forms.py  models.py  urls.py  views.py
flock/locale/de/LC_MESSAGES/: django.mo  django.po
flock/migrations/: 0001_initial.py  0002_auto_20150512_2313.py  0002_auto_20160301_1326.py  0003_auto_20150513_1016.py  0003_donation_payment_service_provider.py  0004_project_default_amount.py  0004_project_is_reward_required.py  0005_auto_20150513_1041.py
flock/templates/flock/: donate_amount_form.html  donate_fail.html  donate_payment_provider.html  donate_thanks.html  form.html  no_project.html
mooch/: banktransfer.py  base.py  dummy.py  forms.py  mail.py  models.py  postfinance.py  signals.py  stripe.py  views.py
mooch/locale/de/LC_MESSAGES/: django.mo  django.po
mooch/templates/mooch/: banktransfer_payment_form.html  donate_payment_provider.html  donate_thanks.html  form.html  no_project.html  postfinance_payment_form.html  stripe_payment_form.html  thanks_mail.txt
tests/: cov.sh  requirements.txt
tests/testapp/: models.py  settings.py  test_flock.py  test_mooch.py  urls.py
tests/testapp/tests/: test_flock.py
